# dotfiles

./: .chezmoiignore  .xsessionrc_work  dot_tmux.conf  dot_vimrc  dot_zsh_aliases  dot_zsh_aliases.tmpl  dot_zsh_color_syntax  dot_zsh_func  dot_zshrc  dot_zshrc.tmpl  executable_dot_fehbg  executable_dot_xinitrc  executable_dot_xsessionrc  executable_dot_xsessionrc.tmpl  executable_dot_xsessionrc_home  executable_dot_xsessionrc_vertical  gitconfig  readme.md  run_once_install-nvim.sh
dot_bin/cht/: cht.cmd  cht.lang  executable_cht.sh
dot_screenlayout/: private_executable_work.sh
dot_tmux/: dot_tmux.conf  dot_tmux.conf.local
private_dot_config/: configuration.nix  starship.toml
private_dot_config/alacritty/: alacritty.toml  alacritty.yml  (+2 more)
private_dot_config/i3/i3lock-color/: I3LOCK_VERSION  LICENSE  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  blur.c  blur.h  config.h.in~  configure.ac  dot_gitignore  executable_build.sh  executable_configure  executable_install-i3lock-color.sh  fonts.h  i3lock-bash  i3lock.1  i3lock.h  unlock_indicator.h  xcb.c
private_dot_config/i3/i3lock-color/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2
private_dot_config/i3/i3lock-color/dot_git/: config  index  packed-refs
private_dot_config/i3/i3lock-color/dot_git/logs/refs/remotes/origin/: HEAD
private_dot_config/i3/i3lock-color/dot_git/objects/pack/: readonly_pack-86ec4e94c1242dd6f2d2e7909b0edf7764f684ac.idx  readonly_pack-86ec4e94c1242dd6f2d2e7909b0edf7764f684ac.pack
private_dot_config/i3/i3lock-color/dot_git/refs/heads/: master
private_dot_config/i3/i3lock-color/dot_github/: FUNDING.yml  ISSUE_TEMPLATE.md  pull_request_template.md
private_dot_config/i3/i3lock-color/dot_github/workflows/: Build Test.yml  codeql-analysis.yml
private_dot_config/i3/i3lock-color/m4/: ax_check_bash_completion.m4  ax_check_zsh_completion.m4  ax_extend_srcdir.m4  ax_sanitizers.m4
private_dot_config/i3/i3lock-color/pam/: i3lock
(+109 files in other folders)
